--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
   <div class="container">
     <a class="navbar-brand" href="#">
-      <h2> <img src="./img/icon.png" alt=""> ISSB preparation</h2>
+      <h2> <img src="./img/icon.png" alt="">ISSB </h2>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
       aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
