--- a/index.html
+++ b/index.html
@@ -60,10 +60,8 @@
 
 <body>
   <div class="container">
-    <div class="container tweets text-justify-center">TWEETS BY ISPR</div>
-    <a class="twitter-timeline" width="427" height="450"
-      href="https://twitter.com/OfficialDGISPR?ref_src=twsrc%5Etfw">Tweets by
-      OfficialDGISPR</a>
+    <a class="twitter-timeline" width="427" height="450" href="https://twitter.com/OfficialDGISPR?ref_src=twsrc%5Etfw">
+    </a>
     <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
   </div>
 
