--- a/videous.html
+++ b/videous.html
@@ -33,7 +33,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
    <div class="container">
       <a class="navbar-brand" href="#">
-         <h2> <img src="./img/icon.png" alt=""> ISSB videous</h2>
+         <h2> <img src="./img/icon.png" alt="">Videous</h2>
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
          aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
