--- a/age-convert.html
+++ b/age-convert.html
@@ -9,6 +9,10 @@
     <link rel="stylesheet" href="./css/age-css.css">
     <link rel="stylesheet" href="./css/bootstrap.min.css">
     <link rel="icon" href="./img/icon.png">
+
+    <script data-ad-client="ca-pub-9538690080227271" async
+        src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+
 </head>
 
 <body>
