--- a/sp-3.html
+++ b/sp-3.html
@@ -185,7 +185,7 @@
 </body>
 <footer>
    <div class="container">
-      <p>&copy; Copyright 2020, issbpreparations.ml</p>
+      <p>&copy; Copyright 2020, issb.ml</p>
       <p>Designed by : Taimoor <a href="https://api.whatsapp.com/send?phone=+923174585625">( Contact )</a> </p>
    </div>
 </footer>
