--- a/index.html
+++ b/index.html
@@ -27,6 +27,14 @@
   <script data-ad-client="ca-pub-9538690080227271" async
     src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'UA-158303368-1');
+  </script>
+
 </head>
 <!------------------------------------------------nav bar----------------------------------->
 
@@ -63,24 +71,35 @@
 <!-----------------------------------------------body------------------------------------------------------->
 
 <body>
-  <div class="container">
+  <div class="container intro center">
+    <h3>HEY! HERE YOU CAN FIND ALL THE COMPILED MATERIAL THAT YOU NEED TO KNOW TO GET THROUGH ISSB. </h3>
+    <P>
+      <div class="CONTAINER MATERIAL">
+        <a onClick="openTab(this)" href="./pdf/ISSB_NOTES.pdf" name="issb note pdf">Download Pdf</a>
+      </div>
+    </P>
+
+  </div>
+  <div class="container ">
     <a class="twitter-timeline" width="427" height="430" href="https://twitter.com/OfficialDGISPR?ref_src=twsrc%5Etfw">
     </a>
     <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
   </div>
 
-  <div class="container ">
-    <h4 class="text-justify-center">Click on link for <a href="./age-convert.html">age convertor</a> to convert your age
+  <div class="container center">
+    <h4>Click on link for <a href="./age-convert.html">age convertor</a> to convert your age
       in
       year/months/days.</h4>
   </div>
-
 
 </body>
 
 <footer>
   <div class="container ">
-    <p>&copy; Copyright 2020, issb.ml</p>
+    <p>&copy; Copyright 2020, issb.ml <small class="text-important"> NOTE: THIS IS NO OFFICIAL SITE OF ISSB <br> IT IS
+        ONLY
+        FOR
+        PREPARATION PURPOSE. </small></p>
     <p>Designed by : Taimoor <a href="https://api.whatsapp.com/send?phone=+923174585625">( Contact )</a> </p>
   </div>
 </footer>
