--- a/age-convert.html
+++ b/age-convert.html
@@ -13,6 +13,17 @@
     <script data-ad-client="ca-pub-9538690080227271" async
         src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-158303368-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-158303368-1');
+    </script>
+
+
 </head>
 
 <body>
