--- a/songs.html
+++ b/songs.html
@@ -28,6 +28,14 @@
     <script data-ad-client="ca-pub-9538690080227271" async
         src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-158303368-1');
+    </script>
+
 </head>
 
 
