--- a/notes.html
+++ b/notes.html
@@ -27,13 +27,16 @@
    <script data-ad-client="ca-pub-9538690080227271" async
       src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 
+   <!-- Global site tag (gtag.js) - Google Analytics -->
+   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-158303368-3"></script>
    <script>
       window.dataLayer = window.dataLayer || [];
       function gtag() { dataLayer.push(arguments); }
       gtag('js', new Date());
 
-      gtag('config', 'UA-158303368-2');
+      gtag('config', 'UA-158303368-3');
    </script>
+
 
 </head>
 <!------------------------------------------------nav bar----------------------------------->
