--- a/index.html
+++ b/index.html
@@ -37,6 +37,15 @@
     gtag('config', 'UA-158303368-3');
   </script>
 
+  <!--media .net adds -->
+  <script type="text/javascript">
+    window._mNHandle = window._mNHandle || {};
+    window._mNHandle.queue = window._mNHandle.queue || [];
+    medianet_versionId = "3121199";
+  </script>
+  <script src="https://contextual.media.net/dmedianet.js?cid=8CU39PUEM" async="async"></script>
+
+
 
 </head>
 <!------------------------------------------------nav bar----------------------------------->
@@ -74,6 +83,19 @@
 <!-----------------------------------------------body------------------------------------------------------->
 
 <body>
+
+  <!--media.net-->
+  <div id="542083702">
+    <script type="text/javascript">
+      try {
+        window._mNHandle.queue.push(function () {
+          window._mNDetails.loadTag("542083702", "728x90", "542083702");
+        });
+      }
+      catch (error) { }
+    </script>
+  </div>
+
   <div class="container intro center">
     <h3>HEY! HERE YOU CAN FIND ALL THE COMPILED MATERIAL THAT YOU NEED TO KNOW TO GET THROUGH ISSB. </h3>
     <P>
@@ -89,10 +111,34 @@
     <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
   </div>
 
+  <!--media.net-->
+  <div id="542083702">
+    <script type="text/javascript">
+      try {
+        window._mNHandle.queue.push(function () {
+          window._mNDetails.loadTag("542083702", "728x90", "542083702");
+        });
+      }
+      catch (error) { }
+    </script>
+  </div>
+
   <div class="container center">
     <h4>Click on link for <a href="./age-convert.html">age convertor</a> to convert your age
       in
       year/months/days.</h4>
+  </div>
+
+  <!--media.net-->
+  <div id="542083702">
+    <script type="text/javascript">
+      try {
+        window._mNHandle.queue.push(function () {
+          window._mNDetails.loadTag("542083702", "728x90", "542083702");
+        });
+      }
+      catch (error) { }
+    </script>
   </div>
 
 </body>
