--- a/notes.html
+++ b/notes.html
@@ -37,6 +37,15 @@
       gtag('config', 'UA-158303368-3');
    </script>
 
+   <!--media .net adds -->
+   <script type="text/javascript">
+      window._mNHandle = window._mNHandle || {};
+      window._mNHandle.queue = window._mNHandle.queue || [];
+      medianet_versionId = "3121199";
+   </script>
+   <script src="https://contextual.media.net/dmedianet.js?cid=8CU39PUEM" async="async"></script>
+
+
 
 </head>
 <!------------------------------------------------nav bar----------------------------------->
@@ -75,6 +84,19 @@
 <!-----------------------------------------------body------------------------------------------------------->
 
 <body>
+
+   <!--media.net-->
+   <div id="542083702">
+      <script type="text/javascript">
+         try {
+            window._mNHandle.queue.push(function () {
+               window._mNDetails.loadTag("542083702", "728x90", "542083702");
+            });
+         }
+         catch (error) { }
+      </script>
+   </div>
+
    <section class="form">
       <div class="container mt-5">
 
@@ -94,6 +116,18 @@
 
             </tbody>
          </table>
+
+         <!--media.net-->
+         <div id="542083702">
+            <script type="text/javascript">
+               try {
+                  window._mNHandle.queue.push(function () {
+                     window._mNDetails.loadTag("542083702", "728x90", "542083702");
+                  });
+               }
+               catch (error) { }
+            </script>
+         </div>
 
          <div class="form-div">
             <h2 class="text-danger text-center pt-5">Please Share Your Experiences With Us</h2>
@@ -121,6 +155,18 @@
 
       </div>
    </section>
+
+   <!--media.net-->
+   <div id="542083702">
+      <script type="text/javascript">
+         try {
+            window._mNHandle.queue.push(function () {
+               window._mNDetails.loadTag("542083702", "728x90", "542083702");
+            });
+         }
+         catch (error) { }
+      </script>
+   </div>
 
    <script src="./js/experiences.js"></script>
 
