--- a/sp-2.html
+++ b/sp-2.html
@@ -38,6 +38,15 @@
       gtag('config', 'UA-158303368-3');
    </script>
 
+   <!--media .net adds -->
+   <script type="text/javascript">
+      window._mNHandle = window._mNHandle || {};
+      window._mNHandle.queue = window._mNHandle.queue || [];
+      medianet_versionId = "3121199";
+   </script>
+   <script src="https://contextual.media.net/dmedianet.js?cid=8CU39PUEM" async="async"></script>
+
+
 
 </head>
 
@@ -75,6 +84,18 @@
 <!-----------------------------------------------body------------------------------------------------------->
 
 <body>
+
+   <!--media.net-->
+   <div id="542083702">
+      <script type="text/javascript">
+         try {
+            window._mNHandle.queue.push(function () {
+               window._mNDetails.loadTag("542083702", "728x90", "542083702");
+            });
+         }
+         catch (error) { }
+      </script>
+   </div>
 
    <h1 class="display-4 text-center texp">
       PATRIOTIC SONGS
@@ -193,6 +214,18 @@
          </li>
       </ul>
    </nav>
+
+   <!--media.net-->
+   <div id="542083702">
+      <script type="text/javascript">
+         try {
+            window._mNHandle.queue.push(function () {
+               window._mNDetails.loadTag("542083702", "728x90", "542083702");
+            });
+         }
+         catch (error) { }
+      </script>
+   </div>
 
 </body>
 <footer>
