--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
         ONLY
         FOR
         PREPARATION PURPOSE. </small></p>
-    <p>Designed by : Taimoor <a href="https://api.whatsapp.com/send?phone=+923174585625">( Contact )</a> </p>
+    <p>Designed by : Taimoor <a href="mailto:taimoor98.th@gmail.com?subject=Message from issb.ml">( contact )</a> </p>
   </div>
 </footer>
 
