--- a/sp-3.html
+++ b/sp-3.html
@@ -230,7 +230,7 @@
 <footer>
    <div class="container">
       <p>&copy; Copyright 2020, issb.ml</p>
-      <p>Designed by : Taimoor <a href="https://api.whatsapp.com/send?phone=+923174585625">( Contact )</a> </p>
+      <p>Designed by : Taimoor <a href="mailto:taimoor98.th@gmail.com?subject=Message from issb.ml">( contact )</a> </p>
    </div>
 </footer>
 
