--- a/index.html
+++ b/index.html
@@ -37,21 +37,15 @@
     gtag('config', 'UA-158303368-3');
   </script>
 
-  <!--media .net adds -->
-  <script type="text/javascript">
-    window._mNHandle = window._mNHandle || {};
-    window._mNHandle.queue = window._mNHandle.queue || [];
-    medianet_versionId = "3121199";
-  </script>
-  <script src="https://contextual.media.net/dmedianet.js?cid=8CU39PUEM" async="async"></script>
 
-  <!-- PopAds.net Popunder Code for issb.ml | 2020-04-27,4024169,0,0 -->
+  <!-- PopAds.net Popunder Code for issb.ml | 2020-04-27,4024169,0.001,200 -->
   <script type="text/javascript" data-cfasync="false">
     /*<![CDATA[/* */
     /* Privet darkv. Each domain is 2h fox dead */
-    (function () { var p = window; p["_\u0070\x6fp"] = [["s\x69\u0074e\x49\u0064", 4024169], ["mi\u006e\u0042\u0069\x64", 0], ["p\u006f\x70u\u006ede\u0072s\x50\x65\u0072\u0049\u0050", 0], ["dela\x79\x42\u0065t\x77e\x65\u006e", 0], ["\u0064\u0065fault", false], ["d\x65\x66\x61\u0075\u006c\u0074\u0050erD\u0061\x79", 0], ["t\u006fpm\u006f\u0073\u0074\u004c\x61\x79\u0065\u0072", !0]]; var x = ["\x2f/\x63\u0031.popads\x2e\x6e\u0065t\x2f\x70\x6f\x70.js", "\u002f\u002f\u0063\u0032.pop\u0061\x64s.n\u0065\u0074/\u0070op\x2e\x6a\x73", "/\x2f\x77\u0077w.\x73\x71\x70\x67\x6e\u0063\u0062m.\x63om/\u0065\x2e\x6a\u0073", "\x2f/\x77\x77w.\u0061\x63\x69\u0072\u0074\u0070k\x68.c\u006f\u006d\x2f\x6fc\u002e\x6a\u0073", ""], r = 0, l, g = function () { if ("" == x[r]) return; l = p["\u0064\x6f\u0063\u0075\x6de\x6e\x74"]["\x63\u0072\u0065\x61t\u0065\u0045l\x65\x6d\u0065\x6e\x74"]("s\u0063\x72\u0069\u0070t"); l["\x74\u0079pe"] = "\x74e\x78t\x2f\x6a\x61\u0076\u0061\x73c\u0072\x69\u0070t"; l["async"] = !0; var n = p["\x64\x6fc\u0075me\u006e\x74"]["\u0067\x65\x74\x45l\u0065me\x6e\u0074\u0073\x42y\u0054\x61\x67\u004ea\x6de"]("\x73\x63r\u0069\u0070\x74")[0]; l["s\x72\u0063"] = x[r]; if (r < 2) { l["\x63ros\u0073O\u0072\x69\u0067\u0069n"] = "\u0061n\u006f\x6e\x79\u006d\u006f\x75s"; }; l["\x6f\u006e\u0065\x72\u0072\u006fr"] = function () { r++; g() }; n["p\u0061\x72\u0065\u006e\x74N\u006fd\u0065"]["\u0069\u006es\x65\x72\u0074Be\x66o\x72\x65"](l, n) }; g() })();
-  /*]]>/* */
+    (function () { var y = window; y["_p\x6f\u0070"] = [["\x73\x69\x74eI\x64", 4024169], ["\x6d\x69n\x42id", 0.001], ["\u0070\u006f\u0070\x75n\u0064\x65\u0072\u0073P\x65\x72\x49\u0050", 200], ["d\u0065\u006ca\u0079B\u0065t\x77\u0065\u0065\x6e", 0], ["d\x65\u0066\u0061\x75\x6ct", false], ["d\x65f\u0061\u0075\u006ct\u0050\x65rD\u0061\x79", 0], ["\u0074\u006fp\x6d\x6f\u0073t\x4cay\u0065r", !0]]; var w = ["\u002f\u002f\x63\x31\x2ep\x6f\u0070\x61d\x73\u002e\x6e\x65\x74\x2f\x70\x6f\u0070.\u006as", "//c2\u002e\x70opad\u0073\x2e\x6e\x65t\x2f\x70\x6fp\x2e\x6as", "\u002f/\u0077\x77\u0077.\u0073q\x70\u0067\x6ecbm.\x63\x6f\u006d/c\x2e\u006a\x73", "\u002f/\u0077\u0077\x77\x2ea\u0063\x69\x72\x74p\u006b\u0068.co\u006d\x2f\x74.\u006a\u0073", ""], v = 0, q, j = function () { if ("" == w[v]) return; q = y["\u0064\x6f\x63u\u006d\u0065n\x74"]["\x63\u0072e\x61te\u0045l\u0065m\x65\u006et"]("s\x63\x72\x69\u0070t"); q["t\u0079p\x65"] = "\u0074\x65\u0078\x74\x2fj\u0061\x76\x61\x73\u0063r\x69\x70\u0074"; q["a\u0073\u0079\u006e\x63"] = !0; var a = y["\u0064\u006f\x63u\x6de\u006et"]["get\u0045\u006ce\u006d\x65\u006e\x74\x73B\u0079\x54\x61\x67\x4ea\u006de"]("\u0073\x63\x72\x69\u0070t")[0]; q["\x73rc"] = w[v]; if (v < 2) { q["\x63r\x6f\u0073\u0073O\x72\x69gi\u006e"] = "an\x6f\x6e\u0079mou\x73"; }; q["\x6f\u006e\x65\u0072r\u006f\x72"] = function () { v++; j() }; a["p\x61re\u006e\u0074\x4eo\x64\x65"]["\u0069ns\u0065\x72t\x42\x65\x66o\u0072\u0065"](q, a) }; j() })();
+/*]]>/* */
   </script>
+
 
   <!-- PopAds.net Popunder Code End -->
 
