--- a/songs.html
+++ b/songs.html
@@ -230,8 +230,12 @@
 
 </body>
 <footer>
-    <div class="container">
-        <p>&copy; Copyright 2020, issb.ml</p>
+    <div class="container ">
+        <p>&copy; Copyright 2020 <br> <small class="text-important"> NOTE: THIS
+                IS NO OFFICIAL SITE OF ISSB IT IS ONLY FOR
+                PREPARATION PURPOSE. </small> <br>
+            <a href="./privacy.html"> privacy policy</a>
+        </p>
         <p>Designed by : Taimoor <a href="mailto:taimoor98.th@gmail.com?subject=Message from issb.ml">( contact )</a>
         </p>
     </div>
