--- a/index.html
+++ b/index.html
@@ -148,10 +148,11 @@
 
 <footer>
   <div class="container ">
-    <p>&copy; Copyright 2020, issb.ml <small class="text-important"> NOTE: THIS IS NO OFFICIAL SITE OF ISSB <br> IT IS
-        ONLY
-        FOR
-        PREPARATION PURPOSE. </small></p>
+    <p>&copy; Copyright 2020 <br> <small class="text-important"> NOTE: THIS
+        IS NO OFFICIAL SITE OF ISSB IT IS ONLY FOR
+        PREPARATION PURPOSE. </small> <br>
+      <a href="./privacy.html"> privacy policy</a>
+    </p>
     <p>Designed by : Taimoor <a href="mailto:taimoor98.th@gmail.com?subject=Message from issb.ml">( contact )</a> </p>
   </div>
 </footer>
