--- a/privacy.html
+++ b/privacy.html
@@ -45,37 +45,39 @@
 
 </head>
 
-<body>
-    <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
-        <div class="container">
-            <a class="navbar-brand" href="#">
-                <h2 style="font-size:3.5vw"> <img src="./img/icon.png" alt="">Privacy policy </h2>
-            </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
-                aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarResponsive">
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="index.html">Home
-                            <span class="sr-only">(current)</span>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="notes.html">Experiences</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="videous.html">Videous</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="songs.html">Songs</a>
-                    </li>
-                </ul>
-            </div>
+<!-- Navigation -->
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
+    <div class="container">
+        <a class="navbar-brand" href="#">
+            <h2 style="font-size:3.5vw"> <img src="./img/icon.png" alt="">Privacy policy </h2>
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
+            aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="index.html">Home
+                        <span class="sr-only">(current)</span>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="notes.html">Experiences</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="videous.html">Videous</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="songs.html">Songs</a>
+                </li>
+            </ul>
         </div>
-    </nav>
+    </div>
+</nav>
+
+<body>
+
     <div class="container center">
         <h1>Privacy Policy for issb preparation</h1>
 
@@ -255,9 +257,8 @@
         <p>&copy; Copyright 2020 <br> <small class="text-important"> NOTE: THIS
                 IS NO OFFICIAL SITE OF ISSB IT IS ONLY FOR
                 PREPARATION PURPOSE. </small> <br>
-            <a href="./privacy.html"> privacy policy</a>
-        </p>
-        <p>Designed by : Taimoor <a href="mailto:taimoor98.th@gmail.com?subject=Message from issb.ml">( contact )</a>
+            <a href="./privacy.html"> privacy policy</a><br>
+            Designed by : Taimoor <a href="mailto:taimoor98.th@gmail.com?subject=Message from issb.ml">( contact )</a>
         </p>
     </div>
 </footer>
