--- a/index.html
+++ b/index.html
@@ -151,9 +151,9 @@
     <p>&copy; Copyright 2020 <br> <small class="text-important"> NOTE: THIS
         IS NO OFFICIAL SITE OF ISSB IT IS ONLY FOR
         PREPARATION PURPOSE. </small> <br>
-      <a href="./privacy.html"> privacy policy</a>
+      <a href="./privacy.html"> privacy policy</a><br>
+      Designed by : Taimoor <a href="mailto:taimoor98.th@gmail.com?subject=Message from issb.ml">( contact )</a>
     </p>
-    <p>Designed by : Taimoor <a href="mailto:taimoor98.th@gmail.com?subject=Message from issb.ml">( contact )</a> </p>
   </div>
 </footer>
 
