--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
           <a class="nav-link" href="notes.html">Experiences</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="videous.html">Videous</a>
+          <a class="nav-link" href="videous.html">Videos</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="songs.html">Songs</a>
@@ -87,24 +87,12 @@
 
 <body>
 
-  <!--media.net-->
-  <div id="542083702">
-    <script type="text/javascript">
-      try {
-        window._mNHandle.queue.push(function () {
-          window._mNDetails.loadTag("542083702", "728x90", "542083702");
-        });
-      }
-      catch (error) { }
-    </script>
-  </div>
-
   <div class="container intro center">
     <h3>HEY! HERE YOU CAN FIND ALL THE COMPILED MATERIAL THAT YOU NEED TO KNOW TO GET THROUGH ISSB. </h3>
     <P>
-      <div class="CONTAINER MATERIAL">
-        <a onClick="openTab(this)" href="./pdf/ISSB_NOTES.pdf" name="issb note pdf">Download Pdf</a>
-      </div>
+    <div class="CONTAINER MATERIAL">
+      <a onClick="openTab(this)" href="./pdf/ISSB_NOTES.pdf" name="issb note pdf">Download Pdf</a>
+    </div>
     </P>
 
   </div>
@@ -114,34 +102,10 @@
     <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
   </div>
 
-  <!--media.net-->
-  <div id="542083702">
-    <script type="text/javascript">
-      try {
-        window._mNHandle.queue.push(function () {
-          window._mNDetails.loadTag("542083702", "728x90", "542083702");
-        });
-      }
-      catch (error) { }
-    </script>
-  </div>
-
   <div class="container center">
     <h4>Click on link for <a href="./age-convert.html">age convertor</a> to convert your age
       in
       year/months/days.</h4>
-  </div>
-
-  <!--media.net-->
-  <div id="542083702">
-    <script type="text/javascript">
-      try {
-        window._mNHandle.queue.push(function () {
-          window._mNDetails.loadTag("542083702", "728x90", "542083702");
-        });
-      }
-      catch (error) { }
-    </script>
   </div>
 
 </body>
