--- a/notes.html
+++ b/notes.html
@@ -75,7 +75,7 @@
                </a>
             </li>
             <li class="nav-item">
-               <a class="nav-link" href="videous.html">Videous</a>
+               <a class="nav-link" href="videous.html">Videos</a>
             </li>
             <li class="nav-item">
                <a class="nav-link" href="songs.html">Songs</a>
@@ -87,19 +87,6 @@
 <!-----------------------------------------------body------------------------------------------------------->
 
 <body>
-
-   <!--media.net-->
-   <div id="542083702">
-      <script type="text/javascript">
-         try {
-            window._mNHandle.queue.push(function () {
-               window._mNDetails.loadTag("542083702", "728x90", "542083702");
-            });
-         }
-         catch (error) { }
-      </script>
-   </div>
-
    <section class="form">
       <div class="container mt-5">
 
@@ -119,18 +106,6 @@
 
             </tbody>
          </table>
-
-         <!--media.net-->
-         <div id="542083702">
-            <script type="text/javascript">
-               try {
-                  window._mNHandle.queue.push(function () {
-                     window._mNDetails.loadTag("542083702", "728x90", "542083702");
-                  });
-               }
-               catch (error) { }
-            </script>
-         </div>
 
          <div class="form-div">
             <h2 class="text-danger text-center pt-5">Please Share Your Experiences With Us</h2>
@@ -158,18 +133,6 @@
 
       </div>
    </section>
-
-   <!--media.net-->
-   <div id="542083702">
-      <script type="text/javascript">
-         try {
-            window._mNHandle.queue.push(function () {
-               window._mNDetails.loadTag("542083702", "728x90", "542083702");
-            });
-         }
-         catch (error) { }
-      </script>
-   </div>
 
    <script src="./js/experiences.js"></script>
 
