--- a/sp-2.html
+++ b/sp-2.html
@@ -73,7 +73,7 @@
                <a class="nav-link" href="notes.html">Experiences</a>
             </li>
             <li class="nav-item">
-               <a class="nav-link" href="videous.html">Videous</a>
+               <a class="nav-link" href="videous.html">Videos</a>
             </li>
             <li class="nav-item active">
                <a class="nav-link" href="songs.html">songs
@@ -87,18 +87,6 @@
 <!-----------------------------------------------body------------------------------------------------------->
 
 <body>
-
-   <!--media.net-->
-   <div id="542083702">
-      <script type="text/javascript">
-         try {
-            window._mNHandle.queue.push(function () {
-               window._mNDetails.loadTag("542083702", "728x90", "542083702");
-            });
-         }
-         catch (error) { }
-      </script>
-   </div>
 
    <h1 class="display-4 text-center texp">
       PATRIOTIC SONGS
@@ -217,18 +205,6 @@
          </li>
       </ul>
    </nav>
-
-   <!--media.net-->
-   <div id="542083702">
-      <script type="text/javascript">
-         try {
-            window._mNHandle.queue.push(function () {
-               window._mNDetails.loadTag("542083702", "728x90", "542083702");
-            });
-         }
-         catch (error) { }
-      </script>
-   </div>
 
 </body>
 <footer>
