--- a/privacy.html
+++ b/privacy.html
@@ -66,7 +66,7 @@
                     <a class="nav-link" href="notes.html">Experiences</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="videous.html">Videous</a>
+                    <a class="nav-link" href="videous.html">Videos</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="songs.html">Songs</a>
