--- a/vp-songs.html
+++ b/vp-songs.html
@@ -58,7 +58,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
    <div class="container">
       <a class="navbar-brand" href="#">
-         <h2> <img src="./img/icon.png" alt="">Videous</h2>
+         <h2> <img src="./img/icon.png" alt="">Videos</h2>
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
          aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -73,7 +73,7 @@
                <a class="nav-link" href="notes.html">Experiences</a>
             </li>
             <li class="nav-item active">
-               <a class="nav-link" href="videous.html">videous
+               <a class="nav-link" href="videous.html">videos
                   <span class="sr-only">(current)</span>
                </a>
             </li>
@@ -87,18 +87,6 @@
 <!-----------------------------------------------body------------------------------------------------------->
 
 <body>
-
-   <!--media.net-->
-   <div id="542083702">
-      <script type="text/javascript">
-         try {
-            window._mNHandle.queue.push(function () {
-               window._mNDetails.loadTag("542083702", "728x90", "542083702");
-            });
-         }
-         catch (error) { }
-      </script>
-   </div>
 
    <h1 class="display-4 text-center texp">
       VIDEO SONGS
@@ -346,19 +334,6 @@
          </li>
       </ul>
    </nav>
-
-   <!--media.net-->
-   <div id="542083702">
-      <script type="text/javascript">
-         try {
-            window._mNHandle.queue.push(function () {
-               window._mNDetails.loadTag("542083702", "728x90", "542083702");
-            });
-         }
-         catch (error) { }
-      </script>
-   </div>
-
 
 </body>
 
