--- a/age-convert.html
+++ b/age-convert.html
@@ -40,7 +40,7 @@
 
 <body>
     <div class="container-1">
-        <h1 class="h1">Convert age in year/months/days</h1>
+        <h1 class="h1">Convert age in year , months and days</h1>
         <div class="flex-box-container-1">
             <div>
                 <button class="btn btn-primary" onclick="ageindays()">B-date</button>
