--- a/age-convert.html
+++ b/age-convert.html
@@ -39,22 +39,24 @@
 </head>
 
 <body>
-    <div class="container-1">
-        <h1 class="h1">Convert age in year , months and days</h1>
-        <div class="flex-box-container-1">
-            <div>
-                <button class="btn btn-primary" onclick="ageindays()">B-date</button>
-            </div>
+  <div class="container-1">
 
-            <div>
+        <h1 class="h1">Convert age in year months days</h1>
+    
+        <div class="flex-box-container-1">
+             <div>
+                <button class="btn btn-primary" onclick="ageindays()">Click me</button>
+             </div>
+
+             <div>
                 <button class="btn btn-danger" onclick="reset()">Reset</button>
-            </div>
-            <div id="result">
+             </div>
+             <div id="result">
                 <h3>RESULT</h3>
                 <div id="reset">
                     <!--append the age here-->
                 </div>
-            </div>
+             </div>
         </div>
 
     </div>
