--- a/age-convert.html
+++ b/age-convert.html
@@ -39,7 +39,7 @@
 </head>
 
 <body>
-  <div class="container-1">
+    <div class="container-1">
 
         <h1 class="h1">Convert age in year months days</h1>
     
@@ -60,11 +60,12 @@
         </div>
 
     </div>
-
     <script src="./js/age calculator .js"></script>
 </body>
+</html>
+
 <footer>
-    <div class="container ">
+    <div class="footer">
         <p>&copy; Copyright 2020 <br> <small class="text-important"> NOTE: THIS
                 IS NO OFFICIAL SITE OF ISSB IT IS ONLY FOR
                 PREPARATION PURPOSE. </small> <br>
@@ -73,5 +74,3 @@
         </p>
     </div>
 </footer>
-
-</html>
